--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ dataset/images_tmp_augmented
 dataset/images_tmp_draw
 models/logs
 models/model_weights
+models/cnn_model/best_models_weights/model_weights/cnn_best_weights_v12.hdf5
