--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dataset/images
 dataset/images_tmp
 dataset/images_tmp_augmented
 dataset/images_tmp_draw
+dataset/images_tmp_draw_sky
 models/logs
 models/model_weights
 models/cnn_model/best_models_weights/model_weights/cnn_best_weights_v12.hdf5
