--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ models/model_weights
 MLPtf
 models/cnn_model/best_models_weights/model_weights/cnn_best_weights_v12.hdf5
 models/cnn_model/model_weights/seg_model_resnet_50_1.hdf5
+models/cnn_model/model_weights/seg_model_seresnetx50_1.hdf5
