--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dataset/images_tmp_augmented
 dataset/images_tmp_draw
 dataset/images_tmp_draw_sky
 dataset/dataset_seg_masks
+dataset/dataset_seg_masks_2
 models/logs
 models/model_weights
 MLPtf
@@ -16,3 +17,4 @@ models/cnn_model/best_models_weights/model_weights/cnn_best_weights_v12.hdf5
 models/cnn_model/model_weights/seg_model_resnet_50_1.hdf5
 models/cnn_model/model_weights/seg_model_seresnetx50_1.hdf5
 models/cnn_model/model_weights/seg_model_seresnetx50_2.hdf5
+models/cnn_model/model_weights/seg_model_seresnetx50_3.hdf5
