--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dataset/images_tmp_draw
 dataset/images_tmp_draw_sky
 dataset/dataset_seg_masks
 dataset/dataset_seg_masks_2
+dataset/dataset_seg_masks_seresnet_101_1
 models/logs
 models/model_weights
 MLPtf
@@ -18,3 +19,4 @@ models/cnn_model/model_weights/seg_model_resnet_50_1.hdf5
 models/cnn_model/model_weights/seg_model_seresnetx50_1.hdf5
 models/cnn_model/model_weights/seg_model_seresnetx50_2.hdf5
 models/cnn_model/model_weights/seg_model_seresnetx50_3.hdf5
+models/cnn_model/model_weights/seg_model_seresnetx101_1.hdf5
